--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,40 @@
-# npm node_modules
-node_modules/
-
-# dist folder
-dist/
-playground/dist/
-
-# Mac DS_Store files
-**/.DS_Store
-
-# IDE
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .idea/
 .vscode/
 
-# dotenv locals
+# Environment variables
+.env
+
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Distributable
+/build
+/dist/
+/playground/dist/
+
+# Misc
+.DS_Store
+
+# Env
+.env
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Node
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # TypeScript cache
 *.tsbuildinfo
 
-# Bitburner type definitions
-**/NetscriptDefinitions.d.ts
+# Netscript definitions is pulled automatically
+NetScriptDefinitions.d.ts
